updated readme & added basic page structure

--- a/proposal.html
+++ b/proposal.html
@@ -5,29 +5,32 @@
     <title>Title</title>
     <style>
         .page {
-            color: blue;
+            font-size: 20px;
         }
         .container {
-            color: gray;
+            width: 500px;
+            height: 100vh;
+            background-color: gray;
+            margin: 0 auto;
         }
         .row {
-            color: green;
+            width: 100%;
+            height: 50px;
+            background-color: bisque;
         }
     </style>
 </head>
 <body>
 <div class="page">
-    Hello
     <div class="container">
-        World
         <div class="row">
-            lol!
+            Hello
         </div>
         <div class="row">
-            lol!
+            World
         </div>
         <div class="row">
-            lol!
+            !!!
         </div>
     </div>
 </div>
