--- a/index.html
+++ b/index.html
@@ -3,53 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <style>
-        .page {
-            font-size: 20px;
-        }
-        .container {
-            width: 1000px;
-            height: 100vh;
-            background-color: white;
-            margin: 0 auto;
-        }
-        .row {
-            width: 100%;
-            margin-bottom: 20px;
-        }
-        .header {
-            width: 100%;
-            min-height: 200px;
-            background-color: gainsboro;
-        }
-        .mid {
-            display: flex;
-            flex-direction: row;
-            justify-content: space-between;
-        }
-        .mid-box {
-            min-height: 200px;
-            width: 48%;
-            background-color: gainsboro;
-        }
-        .footer-container {
-            background-color: gainsboro;
-        }
-        .footer-items {
-            padding-bottom: 15px;
-            padding-top: 15px;
-            min-height: 200px;
-            width: 100%;
-            display: flex;
-            flex-direction: row;
-            justify-content: space-evenly;
-        }
-        .footer-box {
-            min-height: 98%;
-            width: 31%;
-            background-color: gray;
-        }
-    </style>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
 <div class="page">
