--- a/proposal.html
+++ b/proposal.html
@@ -14,26 +14,34 @@
     <div class="container">
         <div class="row">
             <div class="header">
-                <h3>Pwitter</h3>
-                <p>An website which will allow users to tweet similar to twitter</p>
+                <h2>Pwitter</h2>
+                <p>A website which will allow users to tweet similar to twitter</p>
             </div>
         </div>
         <div class="row">
             <div class="mid">
                 <div class="mid-box">
-                    RESTFul API?<br>
+                    What RESTFul API?<br>
+                    ...<br>
+                    <br>
                     How will this api give insight to users?<br>
+                    ...<br>
                     <br>
-                    Would collect: name, bio, email, location, website, and birth date<br>
+                    What are we collecting from the users?<br>
+                    name, bio, email, location, website, and birth date<br>
                     <br>
+                    Identify all entities/tables we might use:<br>
                     USER -> fname, lname, password, dob, email, website, location, and bio<br>
                 </div>
                 <div class="mid-box">
+                    Who will potentially use this site?<br>
                     People who love to share their thoughts with others<br>
                     <br>
+                    Site goals?<br>
                     Goal 1: Have a user-friendly UI<br>
-                    Goal 2: Have a fully polished website by the end of the semester<br>
+                    Goal 2: Have a fully functional website by the end of the semester<br>
                     <br>
+                    Why did we select this topic?<br>
                     We selected this topic because we think this will really challenge us to
                     the fullest and can keep adding complexities as we go.
                 </div>
@@ -43,21 +51,26 @@
             <div class="footer-container">
                 <div class="footer-items">
                     <div class="footer-box">
-                        - Link to API<br>
-                        - Twitter.com<br>
+                        <b>List of Resource Links:</b><br><br>
+                        &nbsp;- Link to API:<br>
+                        &nbsp;&nbsp;&nbsp;apiLink <br>
                         <br>
-                        Resources:<br>
-                        - reactjs.org<br>
-                        - expressjs.com
+                        &nbsp;- Link to site(s) to model after:<br>
+                        &nbsp;&nbsp;&nbsp;Twitter.com<br>
+                        <br>
+                        &nbsp;- Resources:<br>
+                        &nbsp;&nbsp;&nbsp;reactjs.org<br>
+                        &nbsp;&nbsp;&nbsp;expressjs.com
                     </div>
                     <div class="footer-box">
-                        Questions:
+                        <b>Questions + Concerns:</b>
                     </div>
                     <div class="footer-box">
-                        Accessibility implementation thoughts:<br>
-                        Maybe text to speech?<br>
-                        Light/Dark mode?<br>
-                        Font change button?<br>
+                        <b>Accessibility implementation:</b><br>
+                        <br>
+                        &nbsp;- Text to speech?<br>
+                        &nbsp;- Light/Dark mode?<br>
+                        &nbsp;- Font change button?<br>
                     </div>
                 </div>
             </div>
