Project Details Draft (#9)
* Added details about project

* Change page text color to black

* Updated headers for each box

* Added a more detailed pull request guide

--- a/proposal.html
+++ b/proposal.html
@@ -14,16 +14,36 @@
     <div class="container">
         <div class="row">
             <div class="header">
-                header
+                <h2>Pwitter</h2>
+                <p>A website which will allow users to tweet similar to twitter</p>
             </div>
         </div>
         <div class="row">
             <div class="mid">
                 <div class="mid-box">
-                    mid-box-left
+                    What RESTFul API?<br>
+                    ...<br>
+                    <br>
+                    How will this api give insight to users?<br>
+                    ...<br>
+                    <br>
+                    What are we collecting from the users?<br>
+                    name, bio, email, location, website, and birth date<br>
+                    <br>
+                    Identify all entities/tables we might use:<br>
+                    USER -> fname, lname, password, dob, email, website, location, and bio<br>
                 </div>
                 <div class="mid-box">
-                    mid-box-right
+                    Who will potentially use this site?<br>
+                    People who love to share their thoughts with others<br>
+                    <br>
+                    Site goals?<br>
+                    Goal 1: Have a user-friendly UI<br>
+                    Goal 2: Have a fully functional website by the end of the semester<br>
+                    <br>
+                    Why did we select this topic?<br>
+                    We selected this topic because we think this will really challenge us to
+                    the fullest and can keep adding complexities as we go.
                 </div>
             </div>
         </div>
@@ -31,13 +51,26 @@
             <div class="footer-container">
                 <div class="footer-items">
                     <div class="footer-box">
-                        footer-box-left
+                        <b>List of Resource Links:</b><br><br>
+                        &nbsp;- Link to API:<br>
+                        &nbsp;&nbsp;&nbsp;apiLink <br>
+                        <br>
+                        &nbsp;- Link to site(s) to model after:<br>
+                        &nbsp;&nbsp;&nbsp;Twitter.com<br>
+                        <br>
+                        &nbsp;- Resources:<br>
+                        &nbsp;&nbsp;&nbsp;reactjs.org<br>
+                        &nbsp;&nbsp;&nbsp;expressjs.com
                     </div>
                     <div class="footer-box">
-                        footer-box-left
+                        <b>Questions + Concerns:</b>
                     </div>
                     <div class="footer-box">
-                        footer-box-left
+                        <b>Accessibility implementation:</b><br>
+                        <br>
+                        &nbsp;- Text to speech?<br>
+                        &nbsp;- Light/Dark mode?<br>
+                        &nbsp;- Font change button?<br>
                     </div>
                 </div>
             </div>
