Questions are bold and updated API

--- a/proposal.html
+++ b/proposal.html
@@ -21,27 +21,27 @@
         <div class="row">
             <div class="mid">
                 <div class="mid-box">
-                    What RESTFul API?<br>
-                    ...<br>
+                    <b>RESTFul API:</b><br>
+                    Weather API<br>
                     <br>
-                    How will this api give insight to users?<br>
-                    ...<br>
+                    <b>How will this api give insight to users?</b><br>
+                    Will provide weather information of their general location<br>
                     <br>
-                    What are we collecting from the users?<br>
-                    name, bio, email, location, website, and birth date<br>
+                    <b>What are we collecting from the users?</b><br>
+                    name and location<br>
                     <br>
-                    Identify all entities/tables we might use:<br>
-                    USER -> fname, lname, password, dob, email, website, location, and bio<br>
+                    <b>Identify all entities/tables we might use:</b><br>
+                    USER -> fname, lname, password, email, location, and bio<br>
                 </div>
                 <div class="mid-box">
-                    Who will potentially use this site?<br>
+                    <b>Who will potentially use this site?</b><br>
                     People who love to share their thoughts with others<br>
                     <br>
-                    Site goals?<br>
+                    <b>Site goals?</b><br>
                     Goal 1: Have a user-friendly UI<br>
                     Goal 2: Have a fully functional website by the end of the semester<br>
                     <br>
-                    Why did we select this topic?<br>
+                    <b>Why did we select this topic?</b><br>
                     We selected this topic because we think this will really challenge us to
                     the fullest and can keep adding complexities as we go.
                 </div>
