Added two more suggestions under accessibility section

--- a/proposal.html
+++ b/proposal.html
@@ -71,6 +71,8 @@
                         &nbsp;- Text to speech?<br>
                         &nbsp;- Light/Dark mode?<br>
                         &nbsp;- Font change button?<br>
+                        &nbsp;- On screen-keyboard?<br>
+                        &nbsp;- Screen Magnifer?<br>
                     </div>
                 </div>
             </div>
