Added link to the api we will be using

--- a/proposal.html
+++ b/proposal.html
@@ -53,7 +53,7 @@
                     <div class="footer-box">
                         <b>List of Resource Links:</b><br><br>
                         &nbsp;- Link to API:<br>
-                        &nbsp;&nbsp;&nbsp;apiLink <br>
+                        &nbsp;&nbsp;&nbsp;https://openweathermap.org/ <br>
                         <br>
                         &nbsp;- Link to site(s) to model after:<br>
                         &nbsp;&nbsp;&nbsp;Twitter.com<br>
