--- a/proposal.html
+++ b/proposal.html
@@ -53,7 +53,7 @@
                     <div class="footer-box">
                         <b>List of Resource Links:</b><br><br>
                         &nbsp;- Link to API:<br>
-                        &nbsp;&nbsp;&nbsp;apiLink <br>
+                        &nbsp;&nbsp;&nbsp;https://openweathermap.org/ <br>
                         <br>
                         &nbsp;- Link to site(s) to model after:<br>
                         &nbsp;&nbsp;&nbsp;Twitter.com<br>
@@ -71,6 +71,8 @@
                         &nbsp;- Text to speech?<br>
                         &nbsp;- Light/Dark mode?<br>
                         &nbsp;- Font change button?<br>
+                        &nbsp;- On screen-keyboard?<br>
+                        &nbsp;- Screen Magnifer?<br>
                     </div>
                 </div>
             </div>
