Added content under Questions + Concerns as well as made the site more mobile friendly when under 600px;

--- a/proposal.html
+++ b/proposal.html
@@ -63,7 +63,10 @@
                         &nbsp;&nbsp;&nbsp;expressjs.com
                     </div>
                     <div class="footer-box">
-                        <b>Questions + Concerns:</b>
+                        <b>Questions + Concerns:</b><br>
+                        &nbsp;- How will the backend talk to the frontend?<br>
+                        &nbsp;- How many iterations of ui design should we go through?<br>
+                        &nbsp;- How will we maintain user's accounts?
                     </div>
                     <div class="footer-box">
                         <b>Accessibility implementation:</b><br>
