Added Accessiibility mode

--- a/proposal.html
+++ b/proposal.html
@@ -69,18 +69,18 @@
                         &nbsp;- How will we maintain user's accounts?
                     </div>
                     <div class="footer-box">
-                        <b>Accessibility implementation:</b><br>
-                        <br>
-                        &nbsp;- Text to speech?<br>
-                        &nbsp;- Light/Dark mode?<br>
-                        &nbsp;- Font change button?<br>
-                        &nbsp;- On screen-keyboard?<br>
-                        &nbsp;- Screen Magnifer?<br>
+                        <b>Accessibility implementation:</b><br><br>
+                        <form class="footer-accessibility">
+                            <label>Change the font of the page!</label> 
+                            <input type="number" id="fontNumber" class="font-box"/><br>
+                            <input type="button" value="Change Text" onClick="incSize()"/>
+                        </form>
                     </div>
                 </div>
             </div>
         </div>
     </div>
 </div>
+<script src="myscripts.js"></script>
 </body>
 </html>
